--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* RESET CHUNG */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -15,7 +14,6 @@ body {
   line-height: 1.6;
 }
 
-/* NAV BAR */
 nav {
   position: sticky;
   top: 0;
@@ -67,7 +65,6 @@ nav li a:hover {
   }
 }
 
-/* MENU */
 .menu {
   list-style: none;
   display: flex;
@@ -86,7 +83,6 @@ nav li a:hover {
   font-weight: 500;
 }
 
-/* AUTH BUTTONS */
 .auth-buttons {
   margin-left: auto;
   display: flex;
@@ -103,7 +99,6 @@ nav li a:hover {
   background-color: #ff8400;
 }
 
-/* HEADER */
 header {
   background: rgba(255, 81, 0, 0.901);
   color: white;
@@ -151,7 +146,6 @@ header img {
   box-shadow: 0 4px 20px #ff0000f0;
 }
 
-/* SECTION & TITLES */
 section {
   padding: 40px 20px;
   text-align: center;
@@ -163,7 +157,6 @@ h2 {
   margin-bottom: 20px;
 }
 
-/* TABLE */
 table {
   border-radius: 20px;
   overflow: hidden;
@@ -190,7 +183,6 @@ td {
   border-right: 1px solid #d6d6d6;
 }
 
-/* LINKS */
 a {
   color: #9c0000;
   text-decoration: none;
@@ -218,7 +210,6 @@ a:hover {
   border-radius: 25px;
 }
 
-/* GRID SECTIONS */
 .role, .activites {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -226,7 +217,6 @@ a:hover {
   margin-top: 30px;
 }
 
-/* CARDS */
 .role-card, .activites-card {
   border-radius: 16px;
   padding: 25px;
@@ -234,6 +224,12 @@ a:hover {
   background: linear-gradient(135deg, #fffcb1, #ffeb55);
   box-shadow: 0 6px 20px rgba(0,0,0,0.12);
 }
+
+.role-card {
+  display: block;
+  cursor: pointer;
+}
+
 .activites-card {
   border-radius: 16px;
   padding: 25px;
@@ -263,7 +259,6 @@ a:hover {
   object-fit: cover;
 }
 
-/* FOOTER */
 footer {
   background: linear-gradient(90deg, #3a3a3a, #1a1a1a);
   padding: 40px;
